syntax = "proto3";
import "commontype/ClientInfo.proto";
import "inboxservice/TopicFilterOption.proto";
import "inboxservice/LWT.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxMetadataProtos";

package inboxservice;

message InboxMetadata{
  string inboxId = 1;
  uint64 incarnation = 2;
  uint64 mod = 3;
  uint64 lastActiveTime = 4;
  uint32 expirySeconds = 5;
  uint32 limit = 6;
  bool dropOldest = 7; // only work for qos0
  commontype.ClientInfo client = 8; // the owner client
  map<string, TopicFilterOption> topicFilters = 9; // subscribed topic filters
  optional LWT lwt = 10;

  uint64 qos0StartSeq = 11;
  uint64 qos0NextSeq = 12;

  uint64 sendBufferStartSeq = 13;
  uint64 sendBufferNextSeq = 14;

  optional uint64 detachedAt = 15;
}